--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "dotenv": "^6.1.0",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-moment": "^0.8.1",
     "react-router-dom": "^4.4.0-beta.1",
     "react-scripts": "2.0.4",
     "register-service-worker": "^1.5.2"
   },
   "scripts": {
+    "dev": "DEBUG=easy-invoice:* nodemon ./bin/www",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
